# qkd

./: .gitignore  README.md  start_gateway_py38.bat
car_frontend-master/: README.md
car_frontend-master/backend/: requirements.txt
car_frontend-master/backend/app/: A_daa.py  __init__.py  app.py  config.ini  logging_demo.py  utils.py
car_frontend-master/backend/app/daa/: README.txt  alice.py  alice.sage  alice_sage.py  bob_sage.py  car1_simulation.ipynb  car1_simulation.sage.py  new_daa_json.json  qkd_server.py  socket_client.py  socket_client2.py  socket_cloud_client_file_recv.py  socket_server.py  socket_server2.py  str2m.sage
car_frontend-master/backend/app/q_transfer/: vdt_demo.py  video_receive.py  video_send.py
car_frontend-master/backend/app/video_conn/: A_quantum_receive.py  receive.py  send.py  vct_demo.py
car_frontend-master/frontend/: package.json
car_frontend-master/frontend/src/pages/: Car.vue  page2.vue  skg.vue  test.vue
car_frontend_send-master/car_frontend_send-master/: README.md
car_frontend_send-master/car_frontend_send-master/backend/app/mods/skg/threeSteps/Step1╨┼╡└╠╜▓Γ/usrp-server/: CMakeLists.txt
car_frontend_send-master/car_frontend_send-master/backend/app/mods/skg/threeSteps/Step1╨┼╡└╠╜▓Γ/usrp-server/.github/workflows/: cmake.yml
car_frontend_send-master/car_frontend_send-master/backend/app/mods/skg/threeSteps/Step1╨┼╡└╠╜▓Γ/usrp-server/python/examples/: txrx_loop.py
car_frontend_send-master/car_frontend_send-master/backend/app/mods/skg/threeSteps/Step1╨┼╡└╠╜▓Γ/usrp-server/src/: message.hpp  usrp.cc  wave_table.hpp
car_frontend_send-master/car_frontend_send-master/backend/app/mods/skg/threeSteps/Step1╨┼╡└╠╜▓Γ/usrp-server/utils/matlab/: read_int_binary.m  read_uchar_binary.m  read_uint8_binary.m  write_short_binary.m
car_frontend_send-master/car_frontend_send-master/frontend/: index.html  package-lock.json
iot_device_c_demo/: README.md  app.py
iot_device_d_demo/: README.md  app.py
my_quantum-master/my_quantum-master/: QUICKSTART.md  README_GATEWAY.md  requirements.txt  run_gateway.py
my_quantum-master/my_quantum-master/Physical_Keys/: b.txt
my_quantum-master/my_quantum-master/QKD_Keys/: a.txt
my_quantum-master/my_quantum-master/gateway_app/: __init__.py  app.py  auto_importer.py  config.ini  db_ops.py  models.py  physical_keys.py  socket_server.py
my_quantum-master/my_quantum-master/tools/: create_test_data.py  generate_demo_keys.py  import_keys_from_dir.py  show_stats.py
qkd_center-master/qkd_center-master/: README.md  log.txt  log2.txt  qkd_server_catchkey1.py  qkd_server_catchkey2.py  qkd_server_device.py  run_communication_center.py  run_log_listeners.py  socket_server_cloud_daa.py
qkd_center-master/qkd_center-master/server_app/: __init__.py  app.py  hub.py  physical_keys.py
(+480 files in other folders)
